--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,8 @@ src/train/sa_train/runs
 **/__pycache__/
 *.py[cod]
 *$py.class
+paper.tex
+results.txt
+train_results.txt
+results.txt
+train_results.txt
